<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2021 Md. Mahmudul Hasan Shohag. All rights reserved.
-->

<com.google.android.material.button.MaterialButton xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_next"
    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:insetLeft="0dp"
    android:insetTop="0dp"
    android:insetRight="0dp"
    android:insetBottom="0dp"
    android:padding="0dp"
    app:backgroundTint="#22000000"
    app:cornerRadius="48dp"
    app:icon="@drawable/ic_chevron_right"
    app:iconGravity="textEnd"
    app:iconSize="48dp"
    app:iconTint="@color/white"
    app:rippleColor="@color/white"
    tools:viewBindingIgnore="true" />