...
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/bottom_top_shadow"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tv_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="marquee"
        android:gravity="center"
...
